Update Docker image names for frontend deployment

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,14 +13,14 @@ jobs:
 
     - name: Build frontend Docker image
       run: |
-        docker build -f Dockerfile.frontend -t aihost_frontend:latest .
-        docker tag aihost_frontend:latest ghcr.io/${{ secrets.GHCR_USERNAME }}/aihost_frontend:latest
+        docker build -f Dockerfile.frontend -t aihost_frontend_mvp:latest .
+        docker tag aihost_frontend_mvp:latest ghcr.io/${{ secrets.GHCR_USERNAME }}/aihost_frontend_mvp:latest
 
     - name: Login to GHCR
       run: echo ${{ secrets.GHCR_TOKEN }} | docker login ghcr.io -u ${{ secrets.GHCR_USERNAME }} --password-stdin
 
     - name: Push frontend image
-      run: docker push ghcr.io/${{ secrets.GHCR_USERNAME }}/aihost_frontend:latest
+      run: docker push ghcr.io/${{ secrets.GHCR_USERNAME }}/aihost_frontend_mvp:latest
 
     - name: Deploy to k3s
       uses: appleboy/ssh-action@v0.1.6
@@ -31,6 +31,6 @@ jobs:
         passphrase: ${{ secrets.SSH_PASSPHRASE }}
         script: |
           export KUBECONFIG=/home/ubuntu/.kube/config
-          kubectl set image deployment/aihost-frontend aihost-frontend=ghcr.io/${{ secrets.GHCR_USERNAME }}/aihost_frontend:latest
+          kubectl set image deployment/aihost-frontend-mvp aihost-frontend-mvp=ghcr.io/${{ secrets.GHCR_USERNAME }}/aihost_frontend_mvp:latest
           kubectl rollout status deployment/aihost-frontend
           kubectl rollout restart deployment aihost-frontend
