--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,14 +1,13 @@
-# build stage
-FROM node:18 AS build
+# 1️⃣ Build stage
+FROM node:18-alpine AS build
 WORKDIR /app
 COPY package.json package-lock.json ./
 RUN npm ci --silent
-# skopiuj też pliki środowiskowe
 COPY .env.production .env
 COPY . .
 RUN npm run build
 
-# runtime stage (Nginx)
+# 2️⃣ Runtime stage (Nginx)
 FROM nginx:alpine
 COPY --from=build /app/dist /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
