--- a/nginx.conf
+++ b/nginx.conf
@@ -5,7 +5,13 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # Wymuszamy, aby wszystkie ścieżki trafiały do index.html
     location / {
         try_files $uri /index.html;
+    }
+
+    # Opcjonalnie: blokada katalogów
+    location ~* /(?:index|favicon|robots)\.html$ {
+        allow all;
     }
 }
