--- a/nginx.conf
+++ b/nginx.conf
@@ -5,13 +5,26 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    # Wymuszamy, aby wszystkie ścieżki trafiały do index.html
+    # Wszystkie ścieżki trafiają do index.html, jeśli plik nie istnieje
     location / {
-        try_files $uri /index.html;
+        try_files $uri $uri/ /index.html;
     }
 
-    # Opcjonalnie: blokada katalogów
-    location ~* /(?:index|favicon|robots)\.html$ {
-        allow all;
+    # Ustaw typ MIME dla JS/CSS/WASM
+    location ~* \.js$ {
+        add_header Content-Type application/javascript;
+    }
+
+    location ~* \.css$ {
+        add_header Content-Type text/css;
+    }
+
+    location ~* \.wasm$ {
+        add_header Content-Type application/wasm;
+    }
+
+    # Wyłącz cache dla index.html
+    location = /index.html {
+        add_header Cache-Control "no-cache";
     }
 }
