--- a/nginx.conf
+++ b/nginx.conf
@@ -1,30 +1,33 @@
 server {
-    listen 80;
+    listen 80 default_server;       # nasłuch na 0.0.0.0
+    listen [::]:80 default_server;  # dla IPv6
     server_name _;
 
     root /usr/share/nginx/html;
     index index.html;
 
-    # Wszystkie ścieżki trafiają do index.html, jeśli plik nie istnieje
+    # Wszystkie ścieżki trafiają do index.html, jeśli plik nie istnieje (React SPA)
     location / {
-        try_files $uri $uri/ /index.html;
+        try_files $uri /index.html;
     }
 
     # Ustaw typ MIME dla JS/CSS/WASM
     location ~* \.js$ {
-        add_header Content-Type application/javascript;
+        default_type application/javascript;
     }
 
     location ~* \.css$ {
-        add_header Content-Type text/css;
+        default_type text/css;
     }
 
     location ~* \.wasm$ {
-        add_header Content-Type application/wasm;
+        default_type application/wasm;
     }
 
     # Wyłącz cache dla index.html
     location = /index.html {
-        add_header Cache-Control "no-cache";
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Pragma "no-cache";
+        add_header Expires 0;
     }
 }
