--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,31 +1,71 @@
-name: Frontend CI/CD
+name: Deploy Aihost MVP Frontend to Kubernetes
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+      # 1️⃣ Checkout repo
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-    - name: Login to GHCR
-      run: echo ${{ secrets.GHCR_TOKEN }} | docker login ghcr.io -u ${{ secrets.GHCR_USERNAME }} --password-stdin
+      # 2️⃣ Log in to GHCR
+      - name: Log in to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ secrets.GHCR_USERNAME }}
+          password: ${{ secrets.GHCR_PAT }}
 
-    - name: Build and Push frontend image
-      run: |
-        docker build -f Dockerfile.frontend -t ghcr.io/${{ secrets.GHCR_USERNAME }}/aihost_frontend_mvp:latest .
-        docker push ghcr.io/${{ secrets.GHCR_USERNAME }}/aihost_frontend_mvp:latest
+      # 3️⃣ Set up Docker Buildx
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-    - name: Deploy to k3s
-      uses: appleboy/ssh-action@v0.1.6
-      with:
-        host: ${{ secrets.SSH_HOST }}
-        username: ${{ secrets.SSH_USER }}
-        key: ${{ secrets.SSH_KEY }}
-        script: |
-          export KUBECONFIG=/home/ubuntu/.kube/config
-          sudo kubectl set image deployment/aihost-frontend aihost-frontend=ghcr.io/lukaszkosicki/aihost_frontend_mvp:latest -n aihost
-          sudo kubectl rollout status deployment/aihost-frontend -n aihost
+      # 4️⃣ Build and push Docker image
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./frontend
+          push: true
+          tags: ghcr.io/${{ secrets.GHCR_USERNAME }}/aihost_frontend_mvp:latest
+
+      # 5️⃣ Copy Kubernetes manifests to VPS
+      - name: Copy Kubernetes manifests
+        uses: appleboy/scp-action@v0.1.4
+        with:
+          host: ${{ secrets.VPS_HOST }}
+          username: ${{ secrets.VPS_USER }}
+          key: ${{ secrets.VPS_SSH_KEY }}
+          source: "./k8s/aihost_mvp/*.yaml"
+          target: "~/k8s/aihost_mvp/"
+          strip_components: 1
+
+      # 6️⃣ Deploy to k3s on VPS via SSH
+      - name: Deploy to k3s on VPS
+        uses: appleboy/ssh-action@v1.1.0
+        with:
+          host: ${{ secrets.VPS_HOST }}
+          username: ${{ secrets.VPS_USER }}
+          key: ${{ secrets.VPS_SSH_KEY }}
+          script: |
+            set -e
+            echo "🧱 Tworzenie namespace, jeśli nie istnieje..."
+            sudo kubectl get ns aihost_mvp || sudo kubectl create ns aihost_mvp
+
+            echo "🚀 Stosowanie manifestów..."
+            sudo kubectl apply -f ~/k8s/aihost_mvp/deployment-react.yaml
+            sudo kubectl apply -f ~/k8s/aihost_mvp/service-react.yaml
+            if [ -f ~/k8s/aihost_mvp/ingress-react.yaml ]; then
+              sudo kubectl apply -f ~/k8s/aihost_mvp/ingress-react.yaml
+            fi
+
+            echo "♻️ Restart deploymentu..."
+            sudo kubectl -n aihost_mvp rollout restart deployment aihost-frontend
+            sudo kubectl -n aihost_mvp rollout status deployment aihost-frontend
+
+            echo "✅ Deploy zakończony pomyślnie!"
