Add manifest files

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,33 +1,16 @@
 server {
-    listen 80 default_server;       # nasłuch na 0.0.0.0
-    listen [::]:80 default_server;  # dla IPv6
-    server_name _;
+  listen 80;
+  server_name _;
 
-    root /usr/share/nginx/html;
-    index index.html;
+  root /usr/share/nginx/html;
+  index index.html;
 
-    # Wszystkie ścieżki trafiają do index.html, jeśli plik nie istnieje (React SPA)
-    location / {
-        try_files $uri /index.html;
-    }
+  location / {
+    try_files $uri $uri/ /index.html;
+  }
 
-    # Ustaw typ MIME dla JS/CSS/WASM
-    location ~* \.js$ {
-        default_type application/javascript;
-    }
-
-    location ~* \.css$ {
-        default_type text/css;
-    }
-
-    location ~* \.wasm$ {
-        default_type application/wasm;
-    }
-
-    # Wyłącz cache dla index.html
-    location = /index.html {
-        add_header Cache-Control "no-cache, no-store, must-revalidate";
-        add_header Pragma "no-cache";
-        add_header Expires 0;
-    }
+  # (opcjonalnie) proxy do backendu ASP.NET Core
+  # location /api/ {
+  #   proxy_pass http://backend-service:5000/;
+  # }
 }
