--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,15 +1,10 @@
-# 1️⃣ Build stage
-FROM node:18-alpine AS build
+FROM node:18 AS builder
 WORKDIR /app
-COPY package.json package-lock.json ./
-RUN npm ci --silent
-COPY .env.production .env
 COPY . .
-RUN npm run build
+RUN npm install && npm run build
 
-# 2️⃣ Runtime stage (Nginx)
 FROM nginx:alpine
-COPY --from=build /app/dist /usr/share/nginx/html
+COPY --from=builder /app/dist /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
