--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          context: ./frontend
+          context: ./
           push: true
           tags: ghcr.io/${{ secrets.GHCR_USERNAME }}/aihost_frontend_mvp:latest
 
