Update Docker build context and file path
Specify Dockerfile for frontend in build step

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,8 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          context: ./
+          context: ./                 # 👈 katalog z kodem źródłowym
+          file: ./Dockerfile.frontend
           push: true
           tags: ghcr.io/${{ secrets.GHCR_USERNAME }}/aihost_frontend_mvp:latest
 
