Update SSH secrets for deployment to k3s

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,9 +50,9 @@ jobs:
       - name: Deploy to k3s on VPS
         uses: appleboy/ssh-action@v1.1.0
         with:
-          host: ${{ secrets.VPS_HOST }}
-          username: ${{ secrets.VPS_USER }}
-          key: ${{ secrets.VPS_SSH_KEY }}
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
           script: |
             set -e
             echo "🧱 Tworzenie namespace, jeśli nie istnieje..."
