--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: aihost-frontend
-  namespace: aihost_mvp
+  namespace: aihost-mvp
 spec:
   replicas: 2
   selector:
