--- a/k8s/frontend-service.yaml
+++ b/k8s/frontend-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: aihost-frontend-service
-  namespace: aihost_mvp
+  namespace: aihost-mvp
 spec:
   selector:
     app: aihost-frontend
